--- a/05/css_menu2.html
+++ b/05/css_menu2.html
@@ -4,46 +4,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>css를 사용한 상단 메뉴 - 드롭다운 메뉴</title>
+    <title>css_menu2 - left</title>
     <style>
-        /* 기본 설정된 내용을 리셋 */
-        *{margin: 0; padding: 0;}   /* 처음 시작 시 기본셋팅, 기본 설정 리셋 */
+        /* 기존의 설정된 값들을 리셋 : */
+        * {margin: 0; padding: 0;}
         li {list-style: none;}
         a {text-decoration: none; font-size: 14px;}
 
-        .menu {width: 800px;
-            border: 1px solid red;
-            overflow: hidden;
-            margin: 150px auto;
+        /* 수정 부분 시작 */
+        .menu {
+            /* border: 1px solid red; */
+            width: 300px;
+            margin: 150px;
         }
-        .menu > li {       /* 직계 자손 */
-            /*border: 1px solid red;*/
-            width: 20%;     /* 5개 * 20% = 100% */
-            float: left;
+        .menu > li {      /* 직계자손*/
+        /*  float: left; */   /*주석 처리 :top메뉴 구성 시 사용*/
             text-align: center;
+            width: 100%;
             line-height: 40px;
-            background-color: rgb(0, 146, 97);
+            background-color: #5778ff;
         }
-        .menu a {color: #ffffff;}   /* .menu의 후손 a : 색깔을 흰색 */
+
+        /* 수정 부분 끝 */
+
+        .menu a {       /*  .menu 후손 a   */
+            color: white;
+        }
+
         .submenu > li {
             line-height: 50px;
-            background-color: rgb(68, 151, 89);
+            background-color: #94a9ff;
         }
 
-        /* submenu는 기본 출력 시 보이지 않게 처리 */
+        /* submenu는 기본적으로 보이지않게 처리 */
         .submenu {
-            height: 0;      /* ul의 높이를 0으로 처리하면 안 보임 */
-            overflow: hidden;
+            height: 0px;
+            overflow: hidden;   /*블락 밖으로 출력되는 내용을 없앰 */
         }
-
-        /* 마우스 올렸을 때 보이기 처리 */
+        
+        /* 마우스를 올렸을 때 서브 메뉴를 보이도록 처리함 */
         .menu > li:hover {
-            background-color: rgb(68, 151, 89);
-            transition-duration: 0.5;   /* 애니메이션 효과 : 부드럽게 출력 */   
+            background-color: #94a9ff;
+            transition-duration: 2s;
         }
         .menu >li:hover .submenu {
-            height: 250px;      /* 서브메뉴 1개 높이 50px * 5 =250px */
-            transition-duration: 1s;
+            height: 250px;      /* submenu를 보이도록 처리*/
+            transition-duration: 2s;    /*전체 출력까지 인터벌 */
         }
 
     </style>
@@ -101,6 +107,5 @@
             </ul>
         </li>
     </ul>
-    
 </body>
 </html>
