--- a/07/index4.html
+++ b/07/index4.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- CSS 작동이 문제가 될 수 있다. -->
+    <iframe width="100%" src="header.html"></iframe> <br>
+    <iframe width="100%" height="700px" src="main.html"></iframe>
 </body>
 </html>
